@@ -199,6 +199,121 @@ literal|0
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testRepeatWithEmptyLanguage
+specifier|public
+name|void
+name|testRepeatWithEmptyLanguage
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Automaton
+name|a
+init|=
+operator|new
+name|RegExp
+argument_list|(
+literal|"#*"
+argument_list|)
+operator|.
+name|toAutomaton
+argument_list|(
+literal|1000
+argument_list|)
+decl_stmt|;
+comment|// paranoia:
+name|assertTrue
+argument_list|(
+name|a
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|length
+argument_list|()
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+name|a
+operator|=
+operator|new
+name|RegExp
+argument_list|(
+literal|"#+"
+argument_list|)
+operator|.
+name|toAutomaton
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|a
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|length
+argument_list|()
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+name|a
+operator|=
+operator|new
+name|RegExp
+argument_list|(
+literal|"#{2,10}"
+argument_list|)
+operator|.
+name|toAutomaton
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|a
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|length
+argument_list|()
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+name|a
+operator|=
+operator|new
+name|RegExp
+argument_list|(
+literal|"#?"
+argument_list|)
+operator|.
+name|toAutomaton
+argument_list|(
+literal|1000
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|a
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|length
+argument_list|()
+operator|>
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
